5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1616_2942.log
== TEST (2019-04-01 15:03:35) 
-- CODE:
qtdedonuts = int(input("Digite valor de donuts"))

ovos = qtdonuts/2
print(ovos)
leite = qtdonuts/150
print(leite)
farinha = qtdonuts/120
print(farinha)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ovos = qtdonuts/2
NameError: name 'qtdonuts' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:03:44) 
-- CODE:
qtdedonuts = int(input("Digite valor de donuts:"))

ovos = qtdonuts/2
print(ovos)
leite = qtdonuts/150
print(leite)
farinha = qtdonuts/120
print(farinha)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ovos = qtdonuts/2
NameError: name 'qtdonuts' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:03:52) 
-- CODE:
qtdedonuts = int(input("Digite valor de donuts:"))

ovos = qtdedonuts/2
print(ovos)
leite = qtdonuts/150
print(leite)
farinha = qtdonuts/120
print(farinha)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    leite = qtdonuts/150
NameError: name 'qtdonuts' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:04:24) 
-- CODE:
qtdedonuts = int(input("Digite valor de donuts:"))

ovos = qtdedonuts/2
print(ovos)
leite = qtdedonuts/150
print(leite)
farinha = qtdonuts/120
print(farinha)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    farinha = qtdonuts/120
NameError: name 'qtdonuts' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:04:34) 
-- CODE:
qtdedonuts = int(input("Digite valor de donuts:"))

ovos = qtdedonuts/2
print(ovos)
leite = qtdedonuts/150
print(leite)
farinha = qtdedonuts/120
print(farinha)



-- OUTPUT:
12.0
0.16
0.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:04:45) 
-- CODE:
qtdedonuts = int(input("Digite valor de donuts:"))

ovos = qtdedonuts/2
print(ovos)
leite = qtdedonuts/150
print(leite)
farinha = qtdedonuts/120
print(farinha)



-- OUTPUT:
12.0
0.16
0.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:04:57) 
-- CODE:
qtdedonuts = 12

ovos = qtdedonuts/2
print(ovos)
leite = qtdedonuts/150
print(leite)
farinha = qtdedonuts/120
print(farinha)



-- OUTPUT:
6.0
0.08
0.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:05:03) 
-- CODE:
qtdedonuts = 12

ovos = qtdedonuts/2
print(ovos)
leite = qtdedonuts/150
print(leite)
farinha = qtdedonuts/120
print(farinha)



-- EXECUTION TIME:
0.177752
-- TEST CASE 1:
---- input:
24
---- correct output:
4.0
300.0
240.0
---- user output:
6.0
0.08
0.1
-- TEST CASE 2:
---- input:
6
---- correct output:
1.0
75.0
60.0
---- user output:
6.0
0.08
0.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:05:05) 
-- CODE:
qtdedonuts = 12

ovos = qtdedonuts/2
print(ovos)
leite = qtdedonuts/150
print(leite)
farinha = qtdedonuts/120
print(farinha)



-- OUTPUT:
6.0
0.08
0.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:06:02) 
-- CODE:
qtdedonuts = int(input("Digite a quantidade de donuts"))

ovos = qtdedonuts/2
print(ovos)
leite = qtdedonuts/150
print(leite)
farinha = qtdedonuts/120
print(farinha)



-- OUTPUT:
12.0
0.16
0.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:06:09) 
-- CODE:
qtdedonuts = int(input("Digite a quantidade de donuts:"))

ovos = qtdedonuts/2
print(ovos)
leite = qtdedonuts/150
print(leite)
farinha = qtdedonuts/120
print(farinha)



-- OUTPUT:
12.0
0.16
0.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:07:01) 
-- CODE:
qtdedonuts = int(input("Digite a quantidade de donuts:"))

ovos = qtdedonuts/2
print(ovos)
leite = qtdedonuts * 0,15
print(leite)
farinha = qtdedonuts/120
print(farinha)



-- OUTPUT:
12.0
(0, 15)
0.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:07:11) 
-- CODE:
qtdedonuts = int(input("Digite a quantidade de donuts:"))

ovos = qtdedonuts/2
print(ovos)
leite = qtdedonuts * 0.15
print(leite)
farinha = qtdedonuts/120
print(farinha)



-- OUTPUT:
12.0
3.5999999999999996
0.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:12:43) 
-- CODE:
quantidade = int(input("Digite a quantidade de donuts:"))


-- OUTPUT:
12.0
3.5999999999999996
0.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:59) 
-- CODE:
quantidade = int(input("Digite a quantidade de donuts:"))

ovos = (quantidade)/2
leite = (quantidade)/150
farinha = (quantidade)/120
print(ovos)
print(leite)
print(farinha)

-- OUTPUT:
12.0
0.16
0.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:14:13) 
-- CODE:
quantidade = int(input("Digite a quantidade de donuts:"))

ovos = (quantidade)/2
leite = (quantidade)/150
farinha = (quantidade)/120
print(ovos)
print(leite)
print(farinha)

-- OUTPUT:
12.0
0.16
0.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:14:30) 
-- CODE:
quantidade = int(input("Digite a quantidade de donuts:"))

ovos = (quantidade) * 2
leite = (quantidade) *  150
farinha = (quantidade)/120
print(ovos)
print(leite)
print(farinha)

-- OUTPUT:
48
3600
0.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:17:58) 
-- CODE:
quantidade = int(input("Digite a quantidade de donuts:"))

ovos = 2/quantidade
print(ovos)
leite = 150/quantidade
print(leite)
farinha = 120/quantidade

-- OUTPUT:
0.08333333333333333
6.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:18:22) 
-- CODE:
quantidade = int(input("Digite a quantidade de donuts:"))

ovos = 2/quantidade
print(ovos)
leite = 150/quantidade
print(leite)
farinha = 120/quantidade
print(farinha)

-- OUTPUT:
0.08333333333333333
6.25
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:18:51) 
-- CODE:
quantidade = int(input("Digite a quantidade de donuts:"))

ovos = 1/quantidade
print(ovos)
leite = 100/quantidade
print(leite)
farinha = 100/quantidade
print(farinha)

-- OUTPUT:
0.041666666666666664
4.166666666666667
4.166666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:19:24) 
-- CODE:
quantidade = int(input("Digite a quantidade de donuts:"))

ovos = 1/quantidade
print(ovos)
leite = /quantidade
print(leite)
farinha = 100/quantidade
print(farinha)

-- ERROR:
File "XXXX", line 5
    leite = /quantidade
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:19:32) 
-- CODE:
quantidade = int(input("Digite a quantidade de donuts:"))

ovos = 1/quantidade
print(ovos)
leite = 0.150/quantidade
print(leite)
farinha = 100/quantidade
print(farinha)

-- OUTPUT:
0.041666666666666664
0.0062499999999999995
4.166666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:20:09) 
-- CODE:
quantidade = int(input("Digite a quantidade de donuts:"))

ovos = 2/quantidade
print(ovos)
leite = 0.150/quantidade
print(leite)
farinha = 0.120/quantidade
print(farinha)

-- OUTPUT:
0.08333333333333333
0.0062499999999999995
0.005
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:20:51) 
-- CODE:
quantidade = int(input("Digite a quantidade de donuts:"))

ovos = quantidade/2
print(ovos)
leite = quantidade/0.150
print(leite)
farinha = quantidade/0.120
print(farinha)

-- OUTPUT:
12.0
160.0
200.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:09) 
-- CODE:
quantidade = int(input("Digite a quantidade de donuts:"))

ovos = quantidade/1
print(ovos)
leite = quantidade/0.150
print(leite)
farinha = quantidade/0.120
print(farinha)

-- OUTPUT:
24.0
160.0
200.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:21) 
-- CODE:
quantidade = int(input("Digite a quantidade de donuts:"))

ovos = quantidade/1
print(ovos)
leite = quantidade/0.150
print(leite)
farinha = quantidade/0.120
print(farinha)

-- OUTPUT:
24.0
160.0
200.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:58) 
-- CODE:
quantidade = 12
ovos = quantidade/ovos
print(ovos)
leite = quantidade/leite
print(leite)
farinha = quantidade/farinha
print(farinha)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ovos = quantidade/ovos
NameError: name 'ovos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:26:25) 
-- CODE:
var1 = 12

ingrediente1 = 2/(var1)
print(ingrediente1)
ingrediente2 = 150/(var1)
print(ingrediente2)
ingrediente3 = 120/(var1)
print(ingrediente3)


-- OUTPUT:
0.16666666666666666
12.5
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:26:47) 
-- CODE:
var1 = int(input("Digite valor de donuts"))

ingrediente1 = 2/(var1)
print(ingrediente1)
ingrediente2 = 150/(var1)
print(ingrediente2)
ingrediente3 = 120/(var1)
print(ingrediente3)


-- OUTPUT:
0.08333333333333333
6.25
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:26:55) 
-- CODE:
var1 = int(input("Digite valor de donuts:"))

ingrediente1 = 2/(var1)
print(ingrediente1)
ingrediente2 = 150/(var1)
print(ingrediente2)
ingrediente3 = 120/(var1)
print(ingrediente3)


-- OUTPUT:
0.08333333333333333
6.25
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:27:13) 
-- CODE:
var1 = int(input("Digite valor de donuts:"))

ingrediente1 = 1/(var1)
print(ingrediente1)
ingrediente2 = 150/(var1)
print(ingrediente2)
ingrediente3 = 120/(var1)
print(ingrediente3)


-- OUTPUT:
0.041666666666666664
6.25
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:28:10) 
-- CODE:
var1 = int(input("Digite valor de donuts:"))

ingrediente1 = 2 * var1
print(ingrediente1)
ingrediente2 = 150 * var1
print(ingrediente2)
ingrediente3 = 120 * var1
print(ingrediente3)


-- OUTPUT:
48
3600
2880
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:28:42) 
-- CODE:
var1 = int(input("Digite valor de donuts:"))

ingrediente1 = var1/2
print(ingrediente1)
ingrediente2 = 0.150 * var1
print(ingrediente2)
ingrediente3 = 120 * var1
print(ingrediente3)


-- OUTPUT:
12.0
3.5999999999999996
2880
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:29:19) 
-- CODE:
var1 = int(input("Digite valor de donuts:"))

ingrediente1 = var1/2
print(ingrediente1)
ingrediente2 = var1/150
print(ingrediente2)
ingrediente3 = var1/120
print(ingrediente3)


-- OUTPUT:
12.0
0.16
0.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:29:45) 
-- CODE:
var1 = int(input("Digite valor de donuts:"))

ingrediente1 = (var1)/2
print(ingrediente1)
ingrediente2 = (var1)/150
print(ingrediente2)
ingrediente3 = (var1)/120
print(ingrediente3)


-- OUTPUT:
12.0
0.16
0.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:30:14) 
-- CODE:
var1 = int(input("Digite valor de donuts:"))

ingrediente1 = (var1)/2
print(ingrediente1)
ingrediente2 = 150/var1
print(ingrediente2)
ingrediente3 = 0.120/var1
print(ingrediente3)


-- OUTPUT:
12.0
6.25
0.005
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:10) 
-- CODE:
var1 = int(input("Digite valor de donuts:"))

ingrediente1 = 2/(var1)
print(ingrediente1)
ingrediente2 = 150/var1
print(ingrediente2)
ingrediente3 = 120/var1
print(ingrediente3)


-- OUTPUT:
0.08333333333333333
6.25
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:31:22) 
-- CODE:
var1 = int(input("Digite valor de donuts:"))

ingrediente1 = 2/(var1)
print(ingrediente1)
ingrediente2 = 150/var1
print(ingrediente2)
ingrediente3 = 120/var1
print(ingrediente3)


-- EXECUTION TIME:
0.138158
-- TEST CASE 1:
---- input:
24
---- correct output:
4.0
300.0
240.0
---- user output:
0.08333333333333333
6.25
5.0
-- TEST CASE 2:
---- input:
6
---- correct output:
1.0
75.0
60.0
---- user output:
0.3333333333333333
25.0
20.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:36) 
-- CODE:
var1 = int(input("Digite valor de donuts:"))

ingrediente1 = (var1)/1
print(ingrediente1)
ingrediente2 = 150/var1
print(ingrediente2)
ingrediente3 = 120/var1
print(ingrediente3)


-- OUTPUT:
24.0
6.25
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:49) 
-- CODE:
var1 = int(input("Digite valor de donuts:"))

ingrediente1 = (var1)/2
print(ingrediente1)
ingrediente2 = 150/var1
print(ingrediente2)
ingrediente3 = 120/var1
print(ingrediente3)


-- OUTPUT:
12.0
6.25
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:32:52) 
-- CODE:
print(int(input"Quantidade de donuts:"))

-- ERROR:
File "XXXX", line 1
    print(int(input"Quantidade de donuts:"))
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:33:00) 
-- CODE:
print(int(input("Quantidade de donuts:"))

-- ERROR:
File "XXXX", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:34:52) 
-- CODE:
var1 = int(input "Quantidade de donuts:")

ingrediente1 = (var1)/6
print(ingrediente1)


-- ERROR:
File "XXXX", line 1
    var1 = int(input "Quantidade de donuts:")
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:35:13) 
-- CODE:
var1 = int(input("Quantidade de donuts:"))

ingrediente1 = (var1)/6
print(ingrediente1)


-- OUTPUT:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:38:01) 
-- CODE:
var1 = int(input("Digite a quantidade de donuts"))

ingrediente1 = (var1)/6
print(ingrediente1)

ingrediente2 = (var1)/0.8
print(ingrediente2)

-- OUTPUT:
4.0
30.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:38:07) 
-- CODE:
var1 = int(input("Digite a quantidade de donuts:"))

ingrediente1 = (var1)/6
print(ingrediente1)

ingrediente2 = (var1)/0.8
print(ingrediente2)

-- EXECUTION TIME:
0.147948
-- TEST CASE 1:
---- input:
24
---- correct output:
4.0
300.0
240.0
---- user output:
4.0
30.0
-- TEST CASE 2:
---- input:
6
---- correct output:
1.0
75.0
60.0
---- user output:
1.0
7.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:38:09) 
-- CODE:
var1 = int(input("Digite a quantidade de donuts:"))

ingrediente1 = (var1)/6
print(ingrediente1)

ingrediente2 = (var1)/0.8
print(ingrediente2)

-- OUTPUT:
4.0
30.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:38:20) 
-- CODE:
var1 = int(input("Digite a quantidade de donuts:"))

ingrediente1 = (var1)/6
print(ingrediente1)

ingrediente2 = (var1)/8
print(ingrediente2)

-- OUTPUT:
4.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:38:26) 
-- CODE:
var1 = int(input("Digite a quantidade de donuts:"))

ingrediente1 = (var1)/6
print(ingrediente1)

ingrediente2 = (var1)/8
print(ingrediente2)

-- OUTPUT:
4.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:38:28) 
-- CODE:
var1 = int(input("Digite a quantidade de donuts:"))

ingrediente1 = (var1)/6
print(ingrediente1)

ingrediente2 = (var1)/8
print(ingrediente2)

-- OUTPUT:
4.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:38:42) 
-- CODE:
var1 = int(input("Digite a quantidade de donuts:"))

ingrediente1 = (var1)/6
print(ingrediente1)

ingrediente2 = (var1)/0.800
print(ingrediente2)

-- OUTPUT:
4.0
30.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:38:54) 
-- CODE:
var1 = int(input("Digite a quantidade de donuts:"))

ingrediente1 = (var1)/6
print(ingrediente1)

ingrediente2 = (var1)/80
print(ingrediente2)

-- OUTPUT:
4.0
0.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:39:12) 
-- CODE:
var1 = int(input("Digite a quantidade de donuts:"))

ingrediente1 = (var1)/6
print(ingrediente1)

ingrediente2 = (var1)/0.0008
print(ingrediente2)

-- OUTPUT:
4.0
30000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:39:19) 
-- CODE:
var1 = int(input("Digite a quantidade de donuts:"))

ingrediente1 = (var1)/6
print(ingrediente1)

ingrediente2 = (var1)/0.008
print(ingrediente2)

-- OUTPUT:
4.0
3000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:39:28) 
-- CODE:
var1 = int(input("Digite a quantidade de donuts:"))

ingrediente1 = (var1)/6
print(ingrediente1)

ingrediente2 = (var1)/0.08
print(ingrediente2)

-- OUTPUT:
4.0
300.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:39:59) 
-- CODE:
var1 = int(input("Digite a quantidade de donuts:"))

ingrediente1 = (var1)/6
print(ingrediente1)

ingrediente2 = (var1)/0.08
print(ingrediente2)

ingrediente2 = (var1)/0.012
print(ingrediente2)
-- OUTPUT:
4.0
300.0
2000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:40:28) 
-- CODE:
var1 = int(input("Digite a quantidade de donuts:"))

ingrediente1 = (var1)/6
print(ingrediente1)

ingrediente2 = (var1)/0.08
print(ingrediente2)

ingrediente2 = (var1)/0.1
print(ingrediente2)
-- OUTPUT:
4.0
300.0
240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:40:34) 
-- CODE:
var1 = int(input("Digite a quantidade de donuts:"))

ingrediente1 = (var1)/6
print(ingrediente1)

ingrediente2 = (var1)/0.08
print(ingrediente2)

ingrediente2 = (var1)/0.1
print(ingrediente2)
-- EXECUTION TIME:
0.218522
-- TEST CASE 1:
---- input:
24
---- correct output:
4.0
300.0
240.0
---- user output:
4.0
300.0
240.0
-- TEST CASE 2:
---- input:
6
---- correct output:
1.0
75.0
60.0
---- user output:
1.0
75.0
60.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
